--- a/app.css
+++ b/app.css
@@ -16,7 +16,6 @@ h2 {
 .container {
     display: flex;
     flex-direction: column;
-    height: 100vh;
 }
 
 .part {
@@ -31,7 +30,7 @@ h2 {
     contain-intrinsic-block-size: auto 100px;
 }
 
-.part.part3 {
+.part.part4 {
     margin-bottom: 8px;
 }
 
@@ -46,15 +45,17 @@ svg {
 }
 
 .node {
-    fill: #ffd231;
-    stroke: #333;
-    stroke-width: 1.5px;
+    fill: white;
+    border-radius: 50px;
+    filter: drop-shadow(0.35rem 0.35rem 0.4rem rgba(211, 202, 255, 0.5));
+    stroke-width: 0.5px;
+    stroke: #666;
 }
 
 .link {
     fill: none;
-    stroke: #666;
-    stroke-width: 1.5px;
+    stroke: #a600ff;
+    stroke-width: 1px;
 }
 
 .part1 button {
@@ -90,3 +91,14 @@ button {
 }
 
 
+.node-text {
+    fill: black; /* Color del texto */
+    font-size: 1rem; /* Tamaño del texto */
+}
+
+
+@media all and (max-width: 980px) {
+    #twoBlock {
+    flex-direction:column
+    }
+    }
