--- a/app.css
+++ b/app.css
@@ -22,7 +22,7 @@ h2 {
     flex: 1;
     padding: 20px;
     color: black;
-    box-shadow: 0 .125rem .25rem rgba(0,0,0,.075)!important;
+    box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .075) !important;
     margin: 8px;
     border-radius: 0.375rem;
     border: 1px solid #c0c0c0;
@@ -68,14 +68,14 @@ svg {
 }
 
 button {
-    background: none;  
-    color: inherit;    
-    border: none;      
-    padding: 0;        
-    margin: 0;         
-    font: inherit;     
-    cursor: pointer;   
-    outline: inherit;  
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    margin: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
 }
 
 button {
@@ -92,13 +92,27 @@ button {
 
 
 .node-text {
-    fill: black; /* Color del texto */
-    font-size: 1rem; /* Tamaño del texto */
+    fill: black;
+    /* Color del texto */
+    font-size: 1rem;
+    /* Tamaño del texto */
 }
 
+div#nodeCreationSection {
+    margin-bottom: 1rem;
+}
+
+button#addNode {
+    margin-left: 0.33rem;
+    margin-top: 0.33rem;
+}
+
+#nodeList div {
+    margin-bottom: 0.66rem;
+}
 
 @media all and (max-width: 980px) {
     #twoBlock {
-    flex-direction:column
+        flex-direction: column
     }
-    }
+}
